--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a1fb4a08a6.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -15,7 +19,7 @@
         <div class="message">You vs Computer</div>
         <div class="play-area">
             <div class="gamemode">
-                <form>
+                <form id="select">
                     <label for="mode">Change gamemode:</label>
                     <select id="mode">
                         <option value="computer">You vs Computer</option>
@@ -53,9 +57,9 @@
                 </div>
             </div>
         </div>
-        <button class="restart">Restart</button>
+        <button class="restart"><i class="fa-solid fa-rotate-left fa-5x"></i></button>
     </div>
-    <footer>Made by ZThygesen</footer>
+    <footer>Made by <a href="https://github.com/ZThygesen">ZThygesen</a></footer>
     <script src="./script.js"></script>
 </body>
 </html>
