--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="modal">
                     <div class="modal-content">
                         <form>
-                            <button type="button" id="close">Close</button>
+                            <button type="button" id="close">X</button>
                             <label for="player-one">Player One's Name</label>
                             <input type="text" id="player-one" required>
 
